--- a/Timer/qml.qrc
+++ b/Timer/qml.qrc
@@ -1,5 +1,8 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
+        <file>Button.qml</file>
+        <file>ButtonPannel.qml</file>
+        <file>TimeView.qml</file>
     </qresource>
 </RCC>
