--- a/Timer/qml.qrc
+++ b/Timer/qml.qrc
@@ -1,8 +1,9 @@
 <RCC>
     <qresource prefix="/">
-        <file>main.qml</file>
-        <file>Button.qml</file>
-        <file>ButtonPannel.qml</file>
-        <file>TimeView.qml</file>
+        <file>sound/beep.wav</file>
+        <file>qml/Button.qml</file>
+        <file>qml/ButtonPannel.qml</file>
+        <file>qml/main.qml</file>
+        <file>qml/TimeView.qml</file>
     </qresource>
 </RCC>
