--- a/Timer/qml.qrc
+++ b/Timer/qml.qrc
@@ -5,5 +5,6 @@
         <file>qml/ButtonPannel.qml</file>
         <file>qml/main.qml</file>
         <file>qml/TimeView.qml</file>
+        <file>qml/TimeMomentsView.qml</file>
     </qresource>
 </RCC>
